Agregando nuevo proyecto BAD DOG

--- a/index.html
+++ b/index.html
@@ -308,11 +308,19 @@
           </aside></a
         >
         <a href="#trabajo-3" class="portfolio-card"
-          ><img src="assets/portfolio-3.jpg" alt="Casa del Rey" />
+          ><img src="assets/bad-dog.png" alt="Studio BAD DOG" />
           <aside class="portfolio-card-info">
             <div>
-              <h3>PROYECTO EN PROCESO</h3>
-              <p>Pronto se publicará..</p>
+              <h3>Studio BAD DOG</h3>
+              <p>
+                Studio BAD DOG es un proyecto web desarrollado con Bootstrap que
+                ofrece una experiencia intuitiva y profesional. Cuenta con
+                secciones clave como Inicio, que da la bienvenida a los
+                usuarios; Sitios, donde se destacan proyectos realizados;
+                Clientes, que resalta la confianza mediante testimonios;
+                Comencemos, un llamado a la acción para iniciar colaboraciones;
+                y ¿Interesado?
+              </p>
             </div>
           </aside></a
         >
@@ -446,17 +454,26 @@
           </svg>
         </a>
         <article class="portfolio-modal">
-          <img src="assets/portfolio-3.jpg" alt="Trabajo 3" />
+          <img src="assets/bad-dog.png" alt="Trabajo 3" />
           <div class="portfolio-info">
-            <h3>PROYECTO EN PROCESO</h3>
-            <p>Pronto se publicará..</p>
+            <h3>STUDIO BAD DOG</h3>
+            <p>
+              Studio BAD DOG es un proyecto web desarrollado con Bootstrap que
+              ofrece una experiencia intuitiva y profesional. Cuenta con
+              secciones clave como Inicio, que da la bienvenida a los usuarios;
+              Sitios, donde se destacan proyectos realizados; Clientes, que
+              resalta la confianza mediante testimonios; Comencemos, un llamado
+              a la acción para iniciar colaboraciones; y ¿Interesado?
+            </p>
             <aside class="portfolio-details">
-              <small><b>CLIENTE</b></small
-              ><small>Privado</small><small><b>FECHA</b></small
-              ><small>Pronto</small><small><b>TIPO</b></small
+              <small><b>PROYECTO</b></small
+              ><small>Jon Mircha</small><small><b>FECHA</b></small
+              ><small>20/01/2025</small><small><b>TIPO</b></small
               ><small>Sitio Web</small><small><b>ENLACE</b></small
               ><small
-                ><a href="#" target="_blank" rel="noopener">Pronto..</a></small
+                ><a href="#" target="_blank" rel="noopener"
+                  >https://lumaxiviba.github.io/studio-bad-dog/</a
+                ></small
               >
             </aside>
           </div>
