Actualizando el link de BAD DOG

--- a/index.html
+++ b/index.html
@@ -471,7 +471,10 @@
               ><small>20/01/2025</small><small><b>TIPO</b></small
               ><small>Sitio Web</small><small><b>ENLACE</b></small
               ><small
-                ><a href="#" target="_blank" rel="noopener"
+                ><a
+                  href="https://lumaxiviba.github.io/studio-bad-dog/"
+                  target="_blank"
+                  rel="noopener"
                   >https://lumaxiviba.github.io/studio-bad-dog/</a
                 ></small
               >
